--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,5 +11,5 @@ html(ng-app="myApp")
     link(rel='stylesheet', href='/css/main.css')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/mainscript.js')
-  body
+  body.ease
     block body
