--- a/views/partials/contact.jade
+++ b/views/partials/contact.jade
@@ -12,7 +12,7 @@ section.container#contact
 					a(href="tel:1-805-302-4691"): p (805)302-4691
 			div.grid-half
 				div.panel
-					img(src="dogPhone2.jpg",style)
+					img(src="dogPhone2-low.jpg",style)
 					h2: a(href="tel:1-805-302-4691"): span(style="padding:20px").glyphicon.glyphicon-earphone
 					p.hideBottom Call Now
 		div(style="height:150px").contactInfo
@@ -23,7 +23,7 @@ section.container#contact
 					a(href="mailto:dancingtailstraining@gmail.com"): p dancingtailstraining@gmail.com
 			div.grid-half
 				div.panel
-					img(src="dogEmail2.jpg",style)
+					img(src="dogEmail2-low.jpg",style)
 					h2: a(href="mailto:dancingtailstraining@gmail.com"): span(style="padding:20px").glyphicon.glyphicon-envelope
 					p.hideBottom Send Email
 	div.container
@@ -63,6 +63,6 @@ section.container#contact
 				div.panel
 					button Message
 section.pageEnd
-	figure.banner#contactEnd
+	figure.banner#contactEnd(style="background-image:url('../Bailey1-standard.jpg')").bg
 		div
-			img(src="logoTextWhite.png")
+			img(src="logoTextWhite-standard.png", style="width:100%")
