--- a/views/partials/philosophy.jade
+++ b/views/partials/philosophy.jade
@@ -4,7 +4,7 @@ section.container#philosophy
 			h1 Training Philosophy
 		div.portraitLeft
 			div.panel
-				img(src="philosophy2.jpg",style="max-width:100%")
+				img(src="philosophy2-low.jpg",style="max-width:100%")
 		div.panel
 			p As a certified dog trainer and a member of the 
 				a(href="http://www.petprofessionalguild.com/", target="_blank") Pet Professional Guild
@@ -29,37 +29,53 @@ section.container#philosophy
 				a(href="http://www.petprofessionalguild.com/DominanceTheoryPositionStatement",target="_blank") this Pet Professional Guild webpage
 				| .
 section.pageEnd
-	figure.banner(style="background: url('../Maysie2.jpg'); background-size:cover;background-position:bottom center;background-attachment:fixed")
+	figure.banner(style="background-image: url('../Maysie2-standard.jpg'); background-size:cover;background-position:bottom center;background-attachment:fixed").bg
 		div
-			h1 Training Tips
+			h1 Recommended Readings
 section.container
 	div.grid-half
 		div.panelContainer
 			div.panel
-				h2 Interesting Articles
-			div.panel
-				a.underline: p Lorem Ipsum is simply dummy text of the 
-				a.underline: p Lorem Ipsum is simply dummy text of the 
-				a.underline: p Lorem Ipsum is simply dummy text of the 
-				a.underline: p Lorem Ipsum is simply dummy text of the 
-				a.underline: p Lorem Ipsum is simply dummy text of the 
-				a.underline: p Lorem Ipsum is simply dummy text of the 
-				a.underline: p Lorem Ipsum is simply dummy text of the 
+				h2 Recommended Readings
+			div.panel.list
+				div.listItem
+					p: a.bold(href="http://www.amazon.com/Pitcairns-Complete-Guide-Natural-Health/dp/157954973X/ref=sr_1_1?s=books&ie=UTF8&qid=1424997405&sr=1-1&keywords=dr.+pitcairns+complete+guide") Dr. Pitcairn's Complete Guide to Natural Health for Dogs & Cats
+					p Dr. Richard Pitcairn
+				div.listItem
+					p: a.bold(href="http://www.amazon.com/Dont-Shoot-Dog-Teaching-Training/dp/0553380397/ref=sr_1_2?s=books&ie=UTF8&qid=1424997672&sr=1-2&keywords=don%27t+shoot+the+dog+karen+pryor") Don't Shoot the Dog! The New Art of Teaching and Training
+					p Karen Pryor
+				div.listItem
+					p: a.bold(href="http://www.amazon.com/Inside-Dog-What-Dogs-Smell/dp/1416583432/ref=sr_1_1?s=books&ie=UTF8&qid=1425011239&sr=1-1&keywords=inside+of+a+dog+by+alexandra+horowitz") Inside of a Dog: What Dogs See, Smell, and Know
+					p Alexandra Horowitz
+				div.listItem
+					p: a.bold(href="http://www.amazon.com/Raising-Behaviorally-Healthy-Puppy-parenting/dp/0974954241/ref=sr_1_1?s=books&ie=UTF8&qid=1425011509&sr=1-1&keywords=A+Pet+Parenting+Guide") Raising A Behaviorally Healthy Puppy: A Pet Parenting Guide
+					p Dr. Suzanne Hetts
+				div.listItem
+					p: a.bold(href="http://www.amazon.com/Power-Positive-Dog-Training/dp/0470241845/ref=sr_1_1?s=books&ie=UTF8&qid=1425011684&sr=1-1&keywords=The+Power+of+Positive+Dog+Training") The Power of Positive Dog Training
+					p Pat Miller
 
 	div.grid-half
 		div.panelContainer
 			div.panel
-				h2 training Tips
-			div.panel
-				a.underline: p Lorem Ipsum is simply dummy text of the 
-				a.underline: p Lorem Ipsum is simply dummy text of the 
-				a.underline: p Lorem Ipsum is simply dummy text of the 
-				a.underline: p Lorem Ipsum is simply dummy text of the 
-				a.underline: p Lorem Ipsum is simply dummy text of the 
-				a.underline: p Lorem Ipsum is simply dummy text of the 
-				a.underline: p Lorem Ipsum is simply dummy text of the 
+				h2 Interesting Articles
+			div.panel.list
+				div.listItem
+					p: a.bold(href="http://www.amazon.com/Pitcairns-Complete-Guide-Natural-Health/dp/157954973X/ref=sr_1_1?s=books&ie=UTF8&qid=1424997405&sr=1-1&keywords=dr.+pitcairns+complete+guide") Dr. Pitcairn's Complete Guide to Natural Health for Dogs & Cats
+					p Dr. Richard Pitcairn
+				div.listItem
+					p: a.bold(href="http://www.amazon.com/Dont-Shoot-Dog-Teaching-Training/dp/0553380397/ref=sr_1_2?s=books&ie=UTF8&qid=1424997672&sr=1-2&keywords=don%27t+shoot+the+dog+karen+pryor") Don't Shoot the Dog! The New Art of Teaching and Training
+					p Karen Pryor
+				div.listItem
+					p: a.bold(href="http://www.amazon.com/Inside-Dog-What-Dogs-Smell/dp/1416583432/ref=sr_1_1?s=books&ie=UTF8&qid=1425011239&sr=1-1&keywords=inside+of+a+dog+by+alexandra+horowitz") Inside of a Dog: What Dogs See, Smell, and Know
+					p Alexandra Horowitz
+				div.listItem
+					p: a.bold(href="http://www.amazon.com/Raising-Behaviorally-Healthy-Puppy-parenting/dp/0974954241/ref=sr_1_1?s=books&ie=UTF8&qid=1425011509&sr=1-1&keywords=A+Pet+Parenting+Guide") Raising A Behaviorally Healthy Puppy: A Pet Parenting Guide
+					p Dr. Suzanne Hetts
+				div.listItem
+					p: a.bold(href="http://www.amazon.com/Power-Positive-Dog-Training/dp/0470241845/ref=sr_1_1?s=books&ie=UTF8&qid=1425011684&sr=1-1&keywords=The+Power+of+Positive+Dog+Training") The Power of Positive Dog Training
+					p Pat Miller
 section.pageEnd
-	figure.banner#philosophyEnd
+	figure.banner#philosophyEnd(style="background-image:url('../Hubert2-standard.jpg')").bg
 		div
 			h1 See for Yourself
 			p.small Watch our students in action!
