--- a/views/partials/videos.jade
+++ b/views/partials/videos.jade
@@ -18,11 +18,8 @@ section#video.container
 				p.hideBottom Labradoodle Waits for Command to Go Out
 				img(src="video3.jpg")
 section.pageEnd
-	figure.banner#videoEnd
+	figure.banner#videoEnd(style="background-image:url('../Alyssa2-standard.jpg')").bg
 		div
 			h1 Getting to Know Me
 			p.small Learn more about my background and experience!
 			a(href="/about"): button About Me
-
-script(type="text/javascript").
-	
