--- a/views/partials/contact.jade
+++ b/views/partials/contact.jade
@@ -7,7 +7,7 @@ section.container#contact
 		div(style="height:150px;margin-bottom:20px").contactInfo
 			div.grid-half
 				div.panel
-					h2 Phone
+					h2.green Phone
 					p.smallest Give me a call.
 					a(href="tel:1-805-302-4691"): p (805) 302-4691
 			div.grid-half
@@ -18,7 +18,7 @@ section.container#contact
 		div(style="height:150px").contactInfo
 			div.grid-half
 				div.panel
-					h2 Email
+					h2.green Email
 					p.smallest Send me an email.
 					a(href="mailto:dancingtailstraining@gmail.com"): p dancingtailstraining@gmail.com
 			div.grid-half
