--- a/views/partials/contact.jade
+++ b/views/partials/contact.jade
@@ -61,7 +61,7 @@ section.container#contact
 					p Inquiry
 					textarea
 				div.panel
-					button Message
+					button.ease Message
 section.pageEnd
 	figure.banner#contactEnd(style="background-image:url('../Bailey1-standard.jpg')").bg
 		div
