--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -32,4 +32,4 @@ section.pageEnd
 		div
 			h1 Finding the Right Program
 			p.small Read about our different training progams and see which one fits your pup the best
-			a(href="/services"): button View Programs
+			a(href="/services"): button.ease View Programs
