--- a/views/partials/philosophy.jade
+++ b/views/partials/philosophy.jade
@@ -79,4 +79,4 @@ section.pageEnd
 		div
 			h1 See for Yourself
 			p.small Watch our students in action!
-			a(href="/videos"): button Video List
+			a(href="/videos"): button.ease Video List
