--- a/views/partials/videos.jade
+++ b/views/partials/videos.jade
@@ -22,4 +22,4 @@ section.pageEnd
 		div
 			h1 Getting to Know Me
 			p.small Learn more about my background and experience!
-			a(href="/about"): button About Me
+			a(href="/about"): button.ease About Me
