--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,18 +42,11 @@ nav a{
   transition: all 0.3s ease;
 }
 nav #menu li a:hover{
-  border-top:solid white;
   border-bottom:solid white;
   line-height:60px;
 }
-nav #menu li a:active{
-  border-top:solid white;
-  border-bottom:solid white;
-  line-height:40px;
-}
 nav #navContact a:hover{
-  border-bottom:solid white;
-  padding-bottom:5px;
+  color:#eee;
 }
 h1{
   font-size:2.5em;
