color adjusted, home content updated

--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -2,7 +2,7 @@ section.container#bio
 	div.panelContainer
 		div.panel
 			h1 Let me tell you a little bit about myself...
-		div.portraitLeft
+		div.portraitLeft(style="display:inline-block;margin:0;width50%;float:none")
 			div.panel
 				img(src="Alyssa-low.jpg",style="max-width:100%")
 			div.panel
@@ -19,7 +19,7 @@ section.container#bio
 					li.smallest
 						i.fa.fa-graduation-cap
 						| Bachelors of Science in Animal Science, Cal Poly, San Luis Obispo
-		div.panel
+		div.panel(style="width:50%;height:700px;display:inline-block")
 			p I'm Alyssa: a Christian, wife, and (cue the fireworks!) dog trainer, in that order.
 			p But before I fill you in on my journey to this point in my life, I’d like to spend a few lines explaining how I can help you.
 			p Like you, I am a dog lover. But for as much love as we have for our furry canine companions, sometimes their behavior is agitating & confusing. Whether it’s barking at other dogs, potty training issues, or pulling on leash, unwanted behaviors can make our lives (and our dogs’ lives) difficult. And that’s where I come in.
