--- a/public/css/main.css
+++ b/public/css/main.css
@@ -56,17 +56,17 @@ h2{
 }
 button{
   height:44px;
-  color:#3FC380;
+  color:#1BA39C;
   background:transparent;
   font-size:16px;
   font-weight:bolder;
   padding:10px 25px;
-  border:solid #3FC380 3px;
+  border:solid #1BA39C 3px;
   cursor:pointer;
 }
 button:hover{
   color:white;
-  background:#3FC380;
+  background:#1BA39C;
 }
 header {
   text-align:center;
@@ -82,7 +82,7 @@ input{
 }
 input:focus, textarea:focus{
   outline:none;
-  border:solid 2px #41BA73;
+  border:solid 2px #1BA39C;
   padding-left:19px;
   padding-right:19px;
 }
@@ -163,7 +163,7 @@ input:focus, textarea:focus{
 }
 .panel a{
   text-decoration: underline;
-  color:#41BA73;
+  color:#1BA39C;
 }
 .thumbnail img{
   height:77px;
@@ -171,7 +171,7 @@ input:focus, textarea:focus{
 }
 .simpleButton{
   margin-top:20px;
-  color:#3FC380;
+  color:#1BA39C;
   cursor:pointer;
 }
 .container{
@@ -232,7 +232,7 @@ footer .grid-third:last-child{
 }
 .title{
   margin-top:77px;
-  color:#41BA73;
+  color:#1BA39C;
 }
 .small{
   font-size:13px;
@@ -250,9 +250,6 @@ footer .grid-third:last-child{
   color:black;
 }
 .green{
-  color:#41BA73;
-}
-.greenBlue{
   color:#1BA39C;
 }
 .underline{
@@ -316,7 +313,7 @@ nav.seeThrough:after{
   width:100%;
   height:100%;
   content:"";
-  background:#41BA73;
+  background:#1BA39C;
   z-index: -1;
   opacity:0.9;
 }
@@ -327,7 +324,7 @@ nav:after{
   width:100%;
   height:100%;
   content:"";
-  background:#41BA73;
+  background:#1BA39C;
   z-index: -1;
 }
 #menu,#menu li,#menu li a,#navContact{
@@ -408,7 +405,7 @@ footer p a{
   text-decoration:underline;
 }
 footer p a:hover{
-  color:#41BA73;
+  color:#1BA39C;
 }
 footer ul{
   list-style:none;
@@ -428,7 +425,7 @@ footer ul li a{
   opacity:0.5;
 }
 footer ul li a:hover{
-  color:#41BA73;
+  color:#1BA39C;
   opacity:1;
 }
 footer h1, footer p{
@@ -481,7 +478,7 @@ footer .credit{
   top:0;
   left:0;
   content:"";
-  background:#41BA73;
+  background:#1BA39C;
   opacity:0.2;
   z-index: -1;
   -ms-transition: all 0.3s ease;
@@ -604,7 +601,7 @@ footer .credit{
 }
 .listItem a{
   text-decoration: none;
-  color:#41BA73;
+  color:#1BA39C;
 }
 .listItem p:last-child{
   color:#999;
@@ -656,7 +653,7 @@ footer .credit{
   transition: all 0.3s ease;
 }
 #video .viewButton:hover, #contact .contactInfo .grid-half:last-child .panel span:hover{
-  color:#3FC380;
+  color:#1BA39C;
 }
 #video span{
   font-size:40px;
