--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -7,19 +7,22 @@ section.container#bio
 				img(src="Alyssa-low.jpg",style="max-width:100%")
 			div.panel
 				ul
-					li.smallest 
-						img(src="DTIA.png",style="width:19px")
+					li.smallest
+						img(src="DTIA.png").listIcon
 						| Certified in Training and Behavior Consultation from San Francisco's Dog Training Internship Academy
 					li.smallest
-						img(src="PPGsmall.png",style="width:19px")
+						img(src="pettechLogo.jpg").listIcon
+						| Certified in Canine CPR & First Aid by PetTech
+					li.smallest
+						img(src="PPGsmall.png").listIcon
 						| Proud Member of the Pet Professional Guild
 					li.smallest
-						i.fa.fa-graduation-cap
+						i.fa.fa-graduation-cap.listIcon
 						| Master of Art in Social Science, Humboldt State University
 					li.smallest
-						i.fa.fa-graduation-cap
+						i.fa.fa-graduation-cap.listIcon
 						| Bachelors of Science in Animal Science, Cal Poly, San Luis Obispo
-		div.panel(style="width:50%;height:700px;display:inline-block")
+		div.panel(style="width:50%;height:700px;display:inline-block;vertical-align:top")
 			p I'm Alyssa: a Christian, wife, and (cue the fireworks!) dog trainer, in that order.
 			p But before I fill you in on my journey to this point in my life, I’d like to spend a few lines explaining how I can help you.
 			p Like you, I am a dog lover. But for as much love as we have for our furry canine companions, sometimes their behavior is agitating & confusing. Whether it’s barking at other dogs, potty training issues, or pulling on leash, unwanted behaviors can make our lives (and our dogs’ lives) difficult. And that’s where I come in.
