--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,7 +34,7 @@ nav #menu a{
   padding:0 10px;
 }
 nav a{
-  color:white;
+  color:#1BA39C;
   -ms-transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
@@ -42,7 +42,7 @@ nav a{
   transition: all 0.3s ease;
 }
 nav #menu li a:hover{
-  border-bottom:solid white;
+  border-bottom:solid #1BA39C;
   line-height:60px;
 }
 nav #navContact a:hover{
@@ -188,8 +188,7 @@ input:focus, textarea:focus{
   display:inline-block;
   width:48%;
   margin:20px 0;
-  float:left;
-/*  margin-right:4%;*/
+  margin-right:4%;
 }
 /*footer .grid-third{
   width:33.3333333333%;
@@ -210,9 +209,8 @@ footer .grid-third:last-child{
 */
   margin-right:0; 
 }
-.grid-half:last-child{
-  float:right;
-/*  margin-right:0;*/
+.grid-half:nth-child(2n+0){
+  margin-right:0;
 }
 .grid-quarter{
   width:21.25%;
@@ -296,7 +294,7 @@ nav{
   position:fixed;
   top:0;
   left:50%;
-  color:white;
+  color:#1BA39C;
   width:100%;
   height:77px;
   z-index:100;
@@ -313,7 +311,7 @@ nav.seeThrough:after{
   width:100%;
   height:100%;
   content:"";
-  background:#1BA39C;
+  background:#555;
   z-index: -1;
   opacity:0.9;
 }
@@ -602,6 +600,20 @@ footer .credit{
   height:380px;
   overflow: hidden;
 }
+#philosophy ul{
+  padding-left:20px;
+  list-style:disc;
+}
+#philosophy li{
+  margin-bottom:25px;
+}
+#philosophy ul ul{
+  list-style:square;
+  padding-left:40px;
+}
+#philosphy ul ul p{
+  margin-bottom:;
+}
 .list{
   text-align:left;
 }
@@ -626,6 +638,12 @@ footer .credit{
 #video .panelContainer{
   padding:0;
   position:relative;
+  margin:0;
+  width:100%;
+  height:200px;
+  overflow:hidden;
+  background-size:cover;
+  background-position:center center;
 }
 #video .panelContainer:before{
   position:absolute;
