--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block body
   nav.seeThrough.ease
     div#brand
-      a(href='/'): img(src="logoTextWhite-standard.png")
+      a(href='/'): img(src="logoTextGreen-standard.png")
     div#menu
       ul
         li: a(href='/') Home
